docs(readme): add comprehensive module usage documentation
- Document all 7 convention plugins with detailed usage instructions
- Add configuration examples for Checkstyle, Coverage, Publish, and SpotBugs
- Document extension properties and DSL for configurable plugins
- Add task reference tables for each plugin
- Include warnings and notes for plugin-specific behavior
- Add table of contents for easier navigation